--- a/modules/document_request/doc/fr/CHANGELOG
+++ b/modules/document_request/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#15063 Possibilité de demander un document requis personnalisé
 * OTH#0000 Renseigne le champ type de document de la pièce jointe à partir de la ligne de document requis plus tôt
 * OTH#0000 Ajout du champs Requis Pour à la vue formulaire de demande de document
 * FEA#14830 Permettre de demander manuellement des documents
