--- a/modules/commission_insurance/doc/en/CHANGELOG
+++ b/modules/commission_insurance/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* OTH#00000 Do not use commission_data in code, _calculated_commission_data is better
 * OTH#00000 Add stronger validation on rate overrides
 * FEA#13324 Allow to change (if the configuration allows it) the commission rate for a broker on a per-contract basis
 * BUG#14048 Unable to edit party with commission agents if the party is both insurer and broker
