--- a/modules/migrator_party/doc/en/CHANGELOG
+++ b/modules/migrator_party/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#15001 Allow to ignore null zip values in address migrator
 * FEA#14874 Import death date in party migrator
 * FEA#14327 Handle delete option in party relation migrator
 * FEA#14001 Refactoring of migrate method in address migrator
