--- a/modules/claim_salary_fr/doc/fr/CHANGELOG
+++ b/modules/claim_salary_fr/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#14792 Correction des dates agirc/arrco
 * FEA#13681 Correction des dates agirc et arrco et ajout de la table fusionnée
 
 Version 2.6 - 2019-10-11
