--- a/modules/claim_indemnification/doc/fr/CHANGELOG
+++ b/modules/claim_indemnification/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#15127 Permet d'annuler la création d'une période sans prestation sélectionnée
 * BUG#14996 Ajout d'une méthode de contrôle pour être utilisée dans le processus sinistre afin de vérifier si la somme des parts bénéficiaires est égale à 100% sur chacun des services
 * BUG#14995 Ne pas vérifier la quote part pour les indemnisations payées annulées
 * BUG#14904 Correction du code en python 3 causant un crash lors du calcul de l'indemnisation avec part bénéficiaire
