--- a/modules/account_payment_sepa_cog/doc/en/CHANGELOG
+++ b/modules/account_payment_sepa_cog/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#15141 Fix arguments in chain of sepa failure by working days
 * BUG#14814 The batch now only takes .xml files
 * BUG#12202 Automatic directory creation from the path given in parameter for the payment fail batch if needed
 * FEA#14301 Allow to configure sepa dump file in a dedicated folder per journal
