--- a/modules/account_payment_sepa_cog/doc/fr/CHANGELOG
+++ b/modules/account_payment_sepa_cog/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#15141 Correction des arguments dans la chaine de rejet par jours ouvrés
 * BUG#14814 Le batch de traitement des rejets ne prend désormais que les fichiers .xml
 * BUG#12202 Création automatique du dossier passé en paramètre de batch de refus de paiement si besoin
 * FEA#14301 Permettre de configurer le dossier de sortie des fichiers SEPA en fonction du journal
