--- a/modules/contract_insurance_invoice/doc/en/CHANGELOG
+++ b/modules/contract_insurance_invoice/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#15020 The payment date on lines of aperiodic invoices were not recalculted when rebilling
 * BUG#14989 Fix error in change billing information endorsement
 * OTH#00000 Iban is no more required for subscription API
 * OTH#00000 Improve invoice generation performances by grouping invoice account calculation
