--- a/modules/contract_insurance_invoice/doc/fr/CHANGELOG
+++ b/modules/contract_insurance_invoice/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#15020 Les dates de paiement sur les lignes de quittances apériodiques n'étaient pas recalculées au moment du requittancement
 * BUG#14989 Correction d'une erreur dans l'avenant 'Modification des paramètres de quittancement'
 * OTH#00000 L'iban n'est plus requis pour l'api de souscription
 * OTH#00000 Amélioration des performances de la génération des quittances en regroupant le calcul des comptes à recevoir
