--- a/modules/party_cog/doc/en/CHANGELOG
+++ b/modules/party_cog/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#15009 Display role notebook only when the party is company
 * FEA#14891 Manage siren in Party API
 * BUG#13332 Clean up unused VAT codes in party identifier types
 * BUG#14927 Manage the case that death date could be birth date
