--- a/modules/endorsement/doc/en/CHANGELOG
+++ b/modules/endorsement/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#15122 Fix extra data list not updated in extra data when doing endorsement
 * OTH#00000 Display error message if during the manage options endorsement the amount coverage was not set
 * OTH#00000 Fix error when clicking to fast on Next button in endorsement
 * BUG#14691 Fix crash when applying an endorsement on an empty contract
