--- a/modules/claim_document/doc/fr/CHANGELOG
+++ b/modules/claim_document/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#15138 Permet de choisir un bénéficiaire dans le 'requis pour' d'une ligne de demande de document
 * BUG#00000 Corrections sur les demandes de pièces pour le processus des sinistres
 
 Version 2.6 - 2019-10-11
