--- a/modules/contract_group/doc/fr/CHANGELOG
+++ b/modules/contract_group/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#15181 Correctif du domaine sur l'action "Affiliations" depuis le contrat
 * BUG#14428 Correctif pour supporter l'initialisation de l'entité légale sur le sinistre lorsque le souscripteur est la filiale
 
 Version 2.6 - 2019-10-11
