--- a/modules/claim_prest_ij_service/doc/en/CHANGELOG
+++ b/modules/claim_prest_ij_service/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#13836 Display more relevant party names for the claim IJ subscription rec_name
 * BUG#14950 Fix Crashes on double join on same table
 * BUG#14611 Fix BPIJ integration without reject label
 * BUG#14159 Fix gestip flux creation (affiliated subscription)
