--- a/modules/claim_group/doc/en/CHANGELOG
+++ b/modules/claim_group/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#14427 Add domain on claim legal entity
 * BUG#14383 Fix get beneficiaries data when calculating indemnification period
 
 Version 2.6 - 2019-10-11
