--- a/modules/claim_group/locale/fr.po
+++ b/modules/claim_group/locale/fr.po
@@ -14,6 +14,10 @@ msgctxt "field:claim,legal_entity:"
 msgid "Legal Entity"
 msgstr "Société"
 
+msgctxt "field:claim,possible_legal_entities:"
+msgid "Possible Legal Entities"
+msgstr "Sociétés Possibles"
+
 msgctxt "field:claim,management_end_date:"
 msgid "Management End Date"
 msgstr "Date de fin de gestion"
