--- a/modules/claim/doc/en/CHANGELOG
+++ b/modules/claim/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#14817 Fix loss Description disparition after entry
 * BUG#15131 Fix error when saving a document request line needed for a loss
 * BUG#14638 Fix typo in getter
 * BUG#14487 Fix inability to add a beneficiary on a death claim
